tests/error/linear_errors/for_return.err
Guppy compilation failed. Error in file $FILE:17

15:    rs += [q]
16:    if b:
17:        return []
           ^^^^^^^^^
GuppyTypeError: Loop over iterator with linear type `linst[(Qubit, bool)]` cannot be terminated (cannot ensure that all values have been used)
